fix(supra): update supra bar breakpoint for hidding on tablet (768px)

--- a/scss/_o-navbar.scss
+++ b/scss/_o-navbar.scss
@@ -37,7 +37,7 @@
 }
 
 .navbar.supra {
-  @include media-breakpoint-down(xs) {
+  @include media-breakpoint-down(sm) {
     display: none;
   }
 
